scrutinizer php 8.4.0 numbat

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,13 +5,13 @@ filter:
     excluded_paths: [vendor/*, test/*, src/_data/skarp/*]
 
 build:
-    image: default-bionic
+    image: default-numbat
 
     nodes:
         my-tests:
             environment:
                 php:
-                    version: 8.4.8
+                    version: 8.4.0
         analysis:
             tests:
                 override:
