--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -21,4 +21,4 @@ build:
             -   command: "composer phpunit"
                 coverage:
                     file: "docs/coverage.xml"
-                    format: "clover"
+                    format: "lcov"
