--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,25 @@
 {
-    "name": "nik/tips",
+	"name": "nik/tips",
 	"description": "Ett program för tipset",
-    "type": "project",
-    "license": "proprietary",
-    "minimum-stability": "stable",
-    "prefer-stable": true,
-    "require": {
+	"type": "project",
+	"license": "proprietary",
+	"minimum-stability": "stable",
+	"prefer-stable": true,
+	"require": {
 		"php": ">=8.3"
 	},
 	"require-dev": {
-        "phpunit/phpunit": "^12",
-		"squizlabs/php_codesniffer": "^3.0"
-    },
+		"phpunit/phpunit": "^12",
+		"squizlabs/php_codesniffer": "^3.0",
+		"phpstan/phpstan": "^2.1",
+		"phpmetrics/phpmetrics": "^2.8",
+		"phpmd/phpmd": "^2.15"
+	},
 	"scripts": {
-        "phpmd": "php -d error_reporting='E_ALL & ~E_DEPRECATED' tools/phpmd/vendor/bin/phpmd . text tools/phpmd/phpmd.xml || true",
-		"phpmetrics": "php -d error_reporting='E_ALL & ~E_DEPRECATED' tools/phpmetrics/vendor/bin/phpmetrics --config=tools/phpmetrics/phpmetrics.json",
 		"phpdoc": "php -d error_reporting='E_ALL & ~E_DEPRECATED' tools/phpdoc/phpdoc --config=tools/phpdoc/phpdoc.xml",
-		"phpstan": "php -d error_reporting='E_ALL & ~E_DEPRECATED' tools/phpstan/vendor/bin/phpstan analyse -c tools/phpstan/phpstan.neon || true",
+		"phpmd": "php -d error_reporting='E_ALL & ~E_DEPRECATED' vendor/bin/phpmd . text vendor/phpmd/phpmd.xml || true",
+		"phpmetrics": "php -d error_reporting='E_ALL & ~E_DEPRECATED' vendor/bin/phpmetrics --config=vendor/phpmetrics/phpmetrics.json",
+		"phpstan": "php -d error_reporting='E_ALL & ~E_DEPRECATED' vendor/bin/phpstan analyse -c vendor/phpstan/phpstan.neon || true",
 		"phpunit": "XDEBUG_MODE=coverage vendor/bin/phpunit",
 		"phpcs": "./vendor/bin/phpcs src -s",
 		"lint": [
@@ -24,15 +27,15 @@
 			"@phpstan",
 			"@phpcs"
 		]
-    },
-    "autoload": {
-        "psr-4": {
-            "Tips\\": "src/"
-        }
-    },
+	},
+	"autoload": {
+		"psr-4": {
+			"Tips\\": "src/"
+		}
+	},
 	"autoload-dev": {
-        "psr-4": {
-            "Tips\\Tests\\": "tests/"
-        }
-    }
+		"psr-4": {
+			"Tips\\Tests\\": "tests/"
+		}
+	}
 }
